@@ -494,28 +494,28 @@ udev.xml ./refsect1[title="Rules Files"]/refsect2[title="Keys"]/variablelist[4]/
 udev.xml ./refsect1[title="Rules Files"]/refsect2[title="Keys"]/variablelist[4]/varlistentry[term="$$"]
 udevadm.xml ./refsect1[title="Options"]/variablelist/varlistentry[term="-d"]
 udevadm.xml ./refsect1[title="Options"]/variablelist/varlistentry[term="-V"]
-udevadm.xml ./refsect1[title="Options"]/refsect2[title="udevadm info\n      options…\n      devpath|syspath|unit…\n      "]/variablelist/varlistentry[term="-q"]
-udevadm.xml ./refsect1[title="Options"]/refsect2[title="udevadm info\n      options…\n      devpath|syspath|unit…\n      "]/variablelist/varlistentry[term="-p"]
-udevadm.xml ./refsect1[title="Options"]/refsect2[title="udevadm info\n      options…\n      devpath|syspath|unit…\n      "]/variablelist/varlistentry[term="-n"]
-udevadm.xml ./refsect1[title="Options"]/refsect2[title="udevadm info\n      options…\n      devpath|syspath|unit…\n      "]/variablelist/varlistentry[term="-r"]
-udevadm.xml ./refsect1[title="Options"]/refsect2[title="udevadm info\n      options…\n      devpath|syspath|unit…\n      "]/variablelist/varlistentry[term="-a"]
-udevadm.xml ./refsect1[title="Options"]/refsect2[title="udevadm info\n      options…\n      devpath|syspath|unit…\n      "]/variablelist/varlistentry[term="-x"]
-udevadm.xml ./refsect1[title="Options"]/refsect2[title="udevadm info\n      options…\n      devpath|syspath|unit…\n      "]/variablelist/varlistentry[term="-P"]
-udevadm.xml ./refsect1[title="Options"]/refsect2[title="udevadm info\n      options…\n      devpath|syspath|unit…\n      "]/variablelist/varlistentry[term="-d"]
-udevadm.xml ./refsect1[title="Options"]/refsect2[title="udevadm info\n      options…\n      devpath|syspath|unit…\n      "]/variablelist/varlistentry[term="-e"]
-udevadm.xml ./refsect1[title="Options"]/refsect2[title="udevadm info\n      options…\n      devpath|syspath|unit…\n      "]/variablelist/varlistentry[term="-c"]
-udevadm.xml ./refsect1[title="Options"]/refsect2[title="udevadm trigger\n      options…\n      devpath|syspath|unit…\n      "]/variablelist/varlistentry[term="-v"]
-udevadm.xml ./refsect1[title="Options"]/refsect2[title="udevadm trigger\n      options…\n      devpath|syspath|unit…\n      "]/variablelist/varlistentry[term="-n"]
-udevadm.xml ./refsect1[title="Options"]/refsect2[title="udevadm trigger\n      options…\n      devpath|syspath|unit…\n      "]/variablelist/varlistentry[term="-t"]
-udevadm.xml ./refsect1[title="Options"]/refsect2[title="udevadm trigger\n      options…\n      devpath|syspath|unit…\n      "]/variablelist/varlistentry[term="-c"]
-udevadm.xml ./refsect1[title="Options"]/refsect2[title="udevadm trigger\n      options…\n      devpath|syspath|unit…\n      "]/variablelist/varlistentry[term="-s"]
-udevadm.xml ./refsect1[title="Options"]/refsect2[title="udevadm trigger\n      options…\n      devpath|syspath|unit…\n      "]/variablelist/varlistentry[term="-S"]
-udevadm.xml ./refsect1[title="Options"]/refsect2[title="udevadm trigger\n      options…\n      devpath|syspath|unit…\n      "]/variablelist/varlistentry[term="-a"]
-udevadm.xml ./refsect1[title="Options"]/refsect2[title="udevadm trigger\n      options…\n      devpath|syspath|unit…\n      "]/variablelist/varlistentry[term="-A"]
-udevadm.xml ./refsect1[title="Options"]/refsect2[title="udevadm trigger\n      options…\n      devpath|syspath|unit…\n      "]/variablelist/varlistentry[term="-p"]
-udevadm.xml ./refsect1[title="Options"]/refsect2[title="udevadm trigger\n      options…\n      devpath|syspath|unit…\n      "]/variablelist/varlistentry[term="-g"]
-udevadm.xml ./refsect1[title="Options"]/refsect2[title="udevadm trigger\n      options…\n      devpath|syspath|unit…\n      "]/variablelist/varlistentry[term="-y"]
-udevadm.xml ./refsect1[title="Options"]/refsect2[title="udevadm trigger\n      options…\n      devpath|syspath|unit…\n      "]/variablelist/varlistentry[term="-b"]
+udevadm.xml ./refsect1[title="Options"]/refsect2[title="udevadm info\n      options…\n      devpath|syspath|id|unit…\n      "]/variablelist/varlistentry[term="-q"]
+udevadm.xml ./refsect1[title="Options"]/refsect2[title="udevadm info\n      options…\n      devpath|syspath|id|unit…\n      "]/variablelist/varlistentry[term="-p"]
+udevadm.xml ./refsect1[title="Options"]/refsect2[title="udevadm info\n      options…\n      devpath|syspath|id|unit…\n      "]/variablelist/varlistentry[term="-n"]
+udevadm.xml ./refsect1[title="Options"]/refsect2[title="udevadm info\n      options…\n      devpath|syspath|id|unit…\n      "]/variablelist/varlistentry[term="-r"]
+udevadm.xml ./refsect1[title="Options"]/refsect2[title="udevadm info\n      options…\n      devpath|syspath|id|unit…\n      "]/variablelist/varlistentry[term="-a"]
+udevadm.xml ./refsect1[title="Options"]/refsect2[title="udevadm info\n      options…\n      devpath|syspath|id|unit…\n      "]/variablelist/varlistentry[term="-x"]
+udevadm.xml ./refsect1[title="Options"]/refsect2[title="udevadm info\n      options…\n      devpath|syspath|id|unit…\n      "]/variablelist/varlistentry[term="-P"]
+udevadm.xml ./refsect1[title="Options"]/refsect2[title="udevadm info\n      options…\n      devpath|syspath|id|unit…\n      "]/variablelist/varlistentry[term="-d"]
+udevadm.xml ./refsect1[title="Options"]/refsect2[title="udevadm info\n      options…\n      devpath|syspath|id|unit…\n      "]/variablelist/varlistentry[term="-e"]
+udevadm.xml ./refsect1[title="Options"]/refsect2[title="udevadm info\n      options…\n      devpath|syspath|id|unit…\n      "]/variablelist/varlistentry[term="-c"]
+udevadm.xml ./refsect1[title="Options"]/refsect2[title="udevadm trigger\n      options…\n      devpath|syspath|id|unit…\n      "]/variablelist/varlistentry[term="-v"]
+udevadm.xml ./refsect1[title="Options"]/refsect2[title="udevadm trigger\n      options…\n      devpath|syspath|id|unit…\n      "]/variablelist/varlistentry[term="-n"]
+udevadm.xml ./refsect1[title="Options"]/refsect2[title="udevadm trigger\n      options…\n      devpath|syspath|id|unit…\n      "]/variablelist/varlistentry[term="-t"]
+udevadm.xml ./refsect1[title="Options"]/refsect2[title="udevadm trigger\n      options…\n      devpath|syspath|id|unit…\n      "]/variablelist/varlistentry[term="-c"]
+udevadm.xml ./refsect1[title="Options"]/refsect2[title="udevadm trigger\n      options…\n      devpath|syspath|id|unit…\n      "]/variablelist/varlistentry[term="-s"]
+udevadm.xml ./refsect1[title="Options"]/refsect2[title="udevadm trigger\n      options…\n      devpath|syspath|id|unit…\n      "]/variablelist/varlistentry[term="-S"]
+udevadm.xml ./refsect1[title="Options"]/refsect2[title="udevadm trigger\n      options…\n      devpath|syspath|id|unit…\n      "]/variablelist/varlistentry[term="-a"]
+udevadm.xml ./refsect1[title="Options"]/refsect2[title="udevadm trigger\n      options…\n      devpath|syspath|id|unit…\n      "]/variablelist/varlistentry[term="-A"]
+udevadm.xml ./refsect1[title="Options"]/refsect2[title="udevadm trigger\n      options…\n      devpath|syspath|id|unit…\n      "]/variablelist/varlistentry[term="-p"]
+udevadm.xml ./refsect1[title="Options"]/refsect2[title="udevadm trigger\n      options…\n      devpath|syspath|id|unit…\n      "]/variablelist/varlistentry[term="-g"]
+udevadm.xml ./refsect1[title="Options"]/refsect2[title="udevadm trigger\n      options…\n      devpath|syspath|id|unit…\n      "]/variablelist/varlistentry[term="-y"]
+udevadm.xml ./refsect1[title="Options"]/refsect2[title="udevadm trigger\n      options…\n      devpath|syspath|id|unit…\n      "]/variablelist/varlistentry[term="-b"]
 udevadm.xml ./refsect1[title="Options"]/refsect2[title="udevadm settle\n      options…\n      "]/variablelist/varlistentry[term="-t"]
 udevadm.xml ./refsect1[title="Options"]/refsect2[title="udevadm settle\n      options…\n      "]/variablelist/varlistentry[term="-E"]
 udevadm.xml ./refsect1[title="Options"]/refsect2[title="udevadm control options…"]/variablelist/varlistentry[term="-e"]
@@ -531,7 +531,7 @@ udevadm.xml ./refsect1[title="Options"]/refsect2[title="udevadm monitor\n      o
 udevadm.xml ./refsect1[title="Options"]/refsect2[title="udevadm monitor\n      options…\n      "]/variablelist/varlistentry[term="-p"]
 udevadm.xml ./refsect1[title="Options"]/refsect2[title="udevadm monitor\n      options…\n      "]/variablelist/varlistentry[term="-s"]
 udevadm.xml ./refsect1[title="Options"]/refsect2[title="udevadm monitor\n      options…\n      "]/variablelist/varlistentry[term="-t"]
-udevadm.xml ./refsect1[title="Options"]/refsect2[title="udevadm test\n      options…\n      devpath|syspath|unit\n      "]/variablelist/varlistentry[term="-a"]
+udevadm.xml ./refsect1[title="Options"]/refsect2[title="udevadm test\n      options…\n      devpath|syspath|id|unit\n      "]/variablelist/varlistentry[term="-a"]
 vconsole.conf.xml ./refsect1[title="Options"]/variablelist/varlistentry[term="KEYMAP="]
 vconsole.conf.xml ./refsect1[title="Options"]/variablelist/varlistentry[term="FONT="]
 file-hierarchy.xml ./refsect1[title="General Structure"]/variablelist/varlistentry[term="/"]
